--- a/src/public/css/base.css
+++ b/src/public/css/base.css
@@ -28,3 +28,33 @@ body {
 #input_box {
     border: 3px solid black;
 }
+
+table {
+    border-collapse: collapse;
+    width: 100%;
+}
+
+table, th, td {
+    border: 1px solid black;
+}
+
+thead {
+    background-color: lightgray;
+}
+
+thead td {
+    text-align: center;
+}
+
+td {
+    text-align: left;
+}
+
+.textCol {
+    width: 45%;
+}
+
+.languageCol {
+    width: 10%;
+    text-align: center;
+}
