Give name to input box; change label on translation button

--- a/src/views/index.hbs
+++ b/src/views/index.hbs
@@ -1,5 +1,5 @@
 <form method="post">
-    <textarea id="input_box" rows="10" cols="90" placeholder="Enter text here"></textarea>
+    <textarea id="input_box" name="input_box" rows="10" cols="90" placeholder="Enter text here">{{text}}</textarea>
     <br>
-    <input type="submit" value="Search">
+    <input type="submit" value="Translate to English">
 </form>
