Refactor column header from Translation --> English Translation

--- a/src/views/translation.hbs
+++ b/src/views/translation.hbs
@@ -3,7 +3,7 @@
         <tr>
             <td>Original Text</td>
             <td>Language</td>
-            <td>Translation</td>
+            <td>English Translation</td>
         </tr>
     </thead>
     <tbody>
